# demo

./: .env  README.md  config.yaml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.txt  tailwind.config.ts  vercel.json  vite.config.ts
.github/workflows/: code-intel.yml
code_intel/: __init__.py  cli.py
code_intel/correlation/: __init__.py  engine.py
code_intel/leak_detector/: __init__.py  log_scanner.py  luhn.py  patterns.py
code_intel/reporting/: __init__.py  html_report.py  json_report.py  pr_comment.py
code_intel/runtime_tracer/: __init__.py  decorators.py  metrics_store.py  tracer.py
code_intel/static_analyzer/: __init__.py  call_graph.py  tree_sitter_parser.py  unreachable_code.py  unused_imports.py
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: ProtectedRoute.tsx
src/config/: branding.ts  themes.ts
src/contexts/: AppThemeContext.tsx  AuthContext.tsx  NetworkLoadingContext.tsx  OfflineContext.tsx  SyncQueueContext.tsx
src/hooks/: useAdminActions.tsx  useAdminLogger.tsx  useAdminPayments.tsx  useAnalyticsInsights.tsx  useCertifications.tsx  useCouponValidation.tsx  useCustomSections.tsx  useEventTracking.tsx  useExperiences.tsx  useNetworkStatus.tsx  useOTPAuth.tsx  useOfflineData.tsx  useOfflineMutation.tsx  usePWA.tsx  usePerformanceMode.ts  usePlanLimits.tsx  usePlatformAnalytics.tsx  usePlatformSettings.tsx  usePortfolioVersions.tsx  useProjects.tsx  useRazorpay.tsx  (+9 more)
supabase/: config.toml  full_migration.sql
workflows/: code-intel.yml
(+201 files in other folders)
